--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,8 @@ spring.datasource.password=041296@Lost
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.hibernate.ddl-auto=update
+
+# Springdoc OpenAI 3.1 & Swagger 3
+springdoc.swagger-ui.path=/docs-park.html
+springdoc.api-docs.path=/docs-park
+springdoc.packagesToScan=com.curso.demo_park_api.web.controller
